<resources>
<string name="app_name" translatable="false">Alice</string>
<string name="create_account">Create account</string>
<string name="onboarding_error">Onboarding could not be completed</string>
<string name="email_not_valid">Please, check that your email is correct</string>
<string name="title_activity_settings">Settings</string>
<string name="title_activity_about">About</string>
<string name="command_add_selfie">Command Add Selfie</string>
<string name="command_add_document">Command Add Document</string>
<string name="command_get_user_status">Command Get User Status</string>
<string name="command_authenticate">Command Authenticate</string>
<string name="get_supported_documents">Get Supported Documents</string>
<string name="exit">Exit</string>
<string name="general_preferences_header">General</string>
<string name="driver_license_header">Driver\'s license</string>
<string name="country_title">Country</string>
<string name="auth_error">Auth problem: Please, contact alice@alicebiometrics.com</string>
<string name="driver_license_preference_title">Add Spanish driver\'s license</string>
<string name="preferences">Preferences</string>
<string name="email_hint">Please, type your email</string>
<string name="alice_logo_description" translatable="false">Alice logo</string>
<string name="selfie_preference_title">Add Selfie</string>
<string name="user_already_exists">Error: the user already exists</string>
<string name="onboarding_commands">Use OnboardingCommands</string>
<string name="empty_sandbox_token">Error: you must set the SandboxToken on the Preferences</string>
<string name="ask_for_first_name">Ask for First Name</string>
<string name="ask_for_last_name">Ask for Last Name</string>
<string name="hint_last_name">Please, type your last name</string>
<string name="hint_first_name">Please, type your first name</string>
<string name="experimental_environment">Experimental Environment</string>
<string name="client_error">Client error</string>
<string name="connection_error">Connection error</string>
<string name="encoding_error">Encoding error</string>
<string name="invalid_sandbox_token">Invalid SANDBOX_TOKEN. Please, add a valid SANDBOX_TOKEN (Settings)</string>
<string name="server_error">Server error</string>
<string name="unknown_error">Unknown error</string>
<string name="label_framework_version">Framework version:</string>
<string name="title_alice_onboarding" translatable="false">Alice Onboarding</string>
<string name="label_app_version">Version:</string>
<string name="title_app_info">App Info</string>
<string name="select_country">Select country</string>
<string name="onboarding_flow_preferences_header">Onboarding flow</string>
<string name="onboarding_additional_options_preferences_header">Additional options</string>
<string name="experimental_sandbox_token">Experimental Sandbox Token</string>
<string name="id_card_preference_title">Add ID Card</string>
<string name="residence_permit_preference_title">Add Residence Permit</string>
<string name="passport_preference_title">Passport</string>
    <string name="onboarding_click_or_drop">Click or drop image here</string>
<string name="onboarding_close">Close</string>
<string name="onboarding_rotate">Rotate</string>
<string name="onboarding_yes">Yes</string>
<string name="onboarding_no">No</string>
<string name="onboarding_alert_title_really_sure_to_exit">Incomplete process</string>
<string name="onboarding_alert_subtitle_really_sure_to_exit">Are you really sure to exit?</string>
<string name="onboarding_ask_for_permissions_title">This functionality requires camera access</string>
<string name="onboarding_ask_for_permissions_subtitle">In the device settings, open the application settings and activate the camera.</string>
<string name="onboarding_ask_for_permissions_ok_button">Open Settings</string>
<string name="onboarding_ask_for_permissions_cancel_button">Cancel</string>
<string name="onboarding_not_supported_browser_modal_message">We do not recommend the use of this browser. Please try the process using a more popular browser like Chrome or Firefox.</string>
<string name="onboarding_not_supported_browser_modal_title">Unsupported browser</string>
<string name="onboarding_error_config">Please, review your OnboardingConfig. You should select at least one Onboarding Stage.</string>
<string name="onboarding_error_loading_resources">Slow connection, try again later.</string>
<string name="onboarding_error_title_technical">An error occurred.</string>
<string name="onboarding_error_subtitle_technical">Please, try again.</string>
<string name="onboarding_error_title_connection">Connection error</string>
<string name="onboarding_error_subtitle_connection">Please, check your internet connection.</string>
<string name="onboarding_error_storage_is_full_title">Missing disk space</string>
<string name="onboarding_error_storage_is_full_subtitle">Please, delete some files to continue.</string>
<string name="onboarding_error_title_camera">Camera error.</string>
<string name="onboarding_error_subtitle_camera">Please, try again.</string>
<string name="onboarding_error_title_selfie">The selfie could not be sent.</string>
<string name="onboarding_error_subtitle_selfie">Please, try again.</string>
<string name="onboarding_error_title_authentication">Authentication error.</string>
<string name="onboarding_error_subtitle_authentication">Please, try again.</string>
<string name="onboarding_error_subtitle_camera_not_available">Please, check that your context is secure and check your camera</string>
<string name="onboarding_browser_no_compatible">This functionality is not available in this browser, please try Safari</string>
<string name="onboarding_error_user_not_found">User not found</string>
<string name="onboarding_error_title_file_too_big">File is too big</string>
<string name="onboarding_error_subtitle_file_too_big">Max allowed file size is {size} MB</string>
<string name="onboarding_error_title_file_type_not_supported">File not supported</string>
<string name="onboarding_error_subtitle_file_type_not_supported">Supported file types are .jpg, .png, .bmp</string>
<string name="onboarding_error_doc_country_not_supported">Sorry, this type of document is not supported for the selected country</string>
<string name="onboarding_error_title_challenge_timeout">Timeout</string>
<string name="onboarding_error_subtitle_challenge_timeout">The challenge has not been completed. Please, try again</string>
<string name="onboarding_stages_title">Identity verification</string>
<string name="onboarding_stages_description">Please complete the following steps for a successful verification</string>
<string name="onboarding_stages_selfie">Selfie</string>
<string name="onboarding_stages_selfie_with_challenge">Selfie with challenge</string>
<string name="onboarding_stages_selfie_with_document">Selfie with document</string>
<string name="onboarding_stages_id_card">National ID Card</string>
<string name="onboarding_stages_driver_license">Driver license</string>
<string name="onboarding_stages_passport">Passport</string>
<string name="onboarding_stages_residence_permit">Residence permit</string>
<string name="onboarding_stages_credit_card">Credit/Debit card</string>
<string name="onboarding_stages_health_insurance_card">Health insurance card</string>
<string name="onboarding_stages_already_completed">Stage already completed</string>
<string name="onboarding_stages_completed">Completed</string>
<string name="onboarding_stages_inactive">Please complete the previous step</string>
<string name="onboarding_stages_start_button">START</string>
<string name="onboarding_stages_done_button">CONTINUE</string>
<string name="onboarding_sides_title_id_card">National ID Card</string>
<string name="onboarding_sides_title_driver_license">Driver license</string>
<string name="onboarding_sides_title_passport">Passport</string>
<string name="onboarding_sides_title_residence_permit">Residence permit</string>
<string name="onboarding_sides_title_health_insurance_card">Health insurance card</string>
<string name="onboarding_sides_subtitle">Please, proceed with document capture.</string>
<string name="onboarding_sides_front">FRONT SIDE</string>
<string name="onboarding_sides_back">BACK SIDE</string>
<string name="onboarding_sides_info_page">INFO PAGE</string>
<string name="onboarding_sides_tap_here">TAP HERE</string>
<string name="onboarding_sides_done_button">CONTINUE</string>
<string name="onboarding_sides_issuing_country">Issuing country:</string>
<string name="onboarding_country_selector_subtitle_issuing_country">Select the issuing country</string>
<string name="onboarding_country_selector_other">Other</string>
<string name="onboarding_country_selector_not_selected">Please select the issuing country</string>
<string name="onboarding_country_selector_start">Start</string>
<string name="onboarding_country_selector_cancel">Cancel</string>
<string name="onboarding_country_selector_reload">Reload</string>
<string name="onboarding_doc_capturer_retry_photo">Retry photo</string>
<string name="onboarding_doc_capturer_send_photo">Send photo</string>
<string name="onboarding_doc_capturer_manual">Manual capture</string>
<string name="onboarding_doc_capturer_retry">Retry</string>
<string name="onboarding_doc_capturer_dismiss">Cancel</string>
<string name="onboarding_doc_capturer_add_sheet">Add sheet</string>
<string name="onboarding_doc_capturer_send">Send</string>
<string name="onboarding_doc_capturer_info_text">Fit the %1$s of your %2$s from %3$s until it is automatically scanned</string>
<string name="onboarding_doc_capturer_info_text_passport">Fit your passport info page until it is automatically scanned</string>
<string name="onboarding_doc_capturer_alert_title_timeout">Problem reading your document</string>
<string name="onboarding_doc_capturer_alert_subtitle_timeout">Make sure your document is adjusted to the rectangle</string>
<string name="onboarding_doc_capturer_alert_title_generic_problem">Problem reading your document</string>
<string name="onboarding_doc_capturer_alert_subtitle_generic_problem">Make sure you’re showing the right document (%1$s from %2$s) without occlusions, glare or shadows</string>
<string name="onboarding_doc_capturer_alert_subtitle_passport_missing_mrz">Make sure you’re showing your passport without occlusions, glare or shadows</string>
<string name="onboarding_doc_capturer_alert_title_wrong_doc">Wrong document</string>
<string name="onboarding_doc_capturer_alert_subtitle_wrong_doc">Make sure you’re showing the right document (%1$s from %2$s)</string>
<string name="onboarding_doc_capturer_alert_subtitle_wrong_doc_residencepermit_esp">Make sure you’re showing a valid document with photo</string>
<string name="onboarding_doc_capturer_alert_title_wrong_side">Wrong document side</string>
<string name="onboarding_doc_capturer_alert_subtitle_wrong_side">Make sure you’re showing the right side (%1$s)</string>
<string name="onboarding_doc_capturer_alert_title_poor_quality">Problem reading your document</string>
<string name="onboarding_doc_capturer_alert_subtitle_poor_quality">Make sure you\'re showing your document without occlusions, glare or shadows</string>
<string name="onboarding_doc_capturer_front">FRONT SIDE</string>
<string name="onboarding_doc_capturer_back">BACK SIDE</string>
<string name="onboarding_doc_capturer_choose_source">Choose source</string>
<string name="onboarding_doc_capturer_review_back">Use another photo</string>
<string name="onboarding_doc_capturer_subtitle">Please, proceed with the capture</string>
<string name="onboarding_doc_capturer_subtitle_review">Please, make sure that the image only contains a document and it\'s not rotated</string>
<string name="onboarding_doc_capturer_title_review">Image review</string>
<string name="onboarding_doc_capturer_review_ok">It\'s ok</string>
<string name="onboarding_doc_capturer_source_camera">Camera</string>
<string name="onboarding_doc_capturer_source_file">File</string>
</resources>