<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:backgroundTint="@color/colorMainView"
    android:backgroundTintMode="src_atop"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/alice_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alice_white" />


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="onButtonPressed"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:spinning_bar_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/tv_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/round_shape" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/iconMiddle"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconTop"
            app:srcCompat="@drawable/person" />

        <ImageView
            android:id="@+id/iv_email_icon4"
            android:layout_width="34dp"
            android:layout_height="37dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:alpha="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconMiddle"
            app:srcCompat="@drawable/ic_email_24px" />

        <ImageView
            android:id="@+id/iconTop"
            android:layout_width="33dp"
            android:layout_height="38dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/person" />

        <EditText
            android:id="@+id/textFieldTop"
            android:layout_width="228dp"
            android:layout_height="0dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="42dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/onboardingColorWhite"
            android:textColorHint="@color/onboardingColorWhite"
            android:textSize="15dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.976"
            app:layout_constraintStart_toEndOf="@+id/iconTop"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textFieldMiddle"
            android:layout_width="229dp"
            android:layout_height="0dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="42dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/onboardingColorWhite"
            android:textColorHint="@color/onboardingColorWhite"
            android:textSize="15dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toEndOf="@+id/iconMiddle"
            app:layout_constraintTop_toBottomOf="@+id/textFieldTop" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="227dp"
            android:layout_height="0dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="42dp"
            android:autofillHints=""
            android:ems="7"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:outlineAmbientShadowColor="@color/onboardingColorWhite"
            android:textAlignment="center"
            android:textColor="@color/onboardingColorWhite"
            android:textColorHint="@color/onboardingColorWhite"
            android:textColorLink="@color/onboardingColorWhite"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/iv_email_icon4"
            app:layout_constraintTop_toBottomOf="@+id/textFieldMiddle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="onPreferencesClicked"
        android:text="@string/preferences"
        android:textColor="@color/onboardingColorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>